--- a/index.html
+++ b/index.html
@@ -1,24 +1,40 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title> 李浩維自我介紹 </title>
+		<meta charset="utf-8">
 		<link rel="stylesheet" type="text/css">
+    	<meta name="viewport" content="width=device-width, initial-scale=1">
+		<title> 李浩維自我介紹 </title>
+    	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+	
 		<style>
 		@import url("body.css")
-		</style>
+    	</style>
 	</head>
 	
 	<body>
 	<header>
-		<img src="0FDB09AD-D1CB-41DC-A1BD-47B02E17598A.jpg" width="200">
-		<h1>李浩維自我介紹 A107070263 李浩維</h1>
+		<nav>
+		<ul>
+    	<a href="#">簡介</a> |
+    	<a href="#">家庭</a> |
+    	<a href="#">關於我</a> |
+    	<a href="#">特殊經歷</a> |
+    	<a href="#">興趣</a> |
+   		<a href="#">讀書計畫及未來規劃</a> |
+		</ul>
+		</nav>
+		<h1>A107070263 李浩維 自我介紹</h1>
+		<img src="0FDB09AD-D1CB-41DC-A1BD-47B02E17598A.jpg" width="400">
 		<div class="card">
 	</header>
 		
 	<div class="solid">
 	 <section>
+
 		<h2>簡介：</h2>
-		<p>👉這裡是<a href="https://www.facebook.com/lee.h.w.dylan//">李浩維</a>的臉書快來認識我吧😁<p/><br>
+		<p>👉這裡是<a href="https://www.facebook.com/lee.h.w.dylan">李浩維</a>的臉書快來認識我！<p/><br>
+		<p>👉也歡迎來<a href="https://www.youtube.com/channel/UC67efZBgVPx3q8MLZHWoAMA">我的 YouTube 頻道</a>！😁<p/><br>	
 		<p>我是李浩維，今年二十一歲，目前就讀世新大學資訊傳播學系大學四年級，來自新竹市，在一個相對開放的家庭中成長，個性外向、活潑、時常搞怪，又很有創意、想法的人，經常做出令
 		人傻眼、想不到的事，想法也經常跳脫框架，喜歡嘗試各種事物，不畏懼失敗，在錯誤中學習，只要堅持到最後就一定會有機會成功，有著不服輸的個性。影響我最恩的一句話是：【只有親手完成的事，才會是自己的】。我對自己的期望非常高，希望自己能成為能夠一力成當整個家庭的存在，對於未來自己的規劃非常明確，目前則正在一步步的向前邁進。
 		</p>
@@ -47,18 +63,24 @@
 	 <section>
 		<h2>興趣：</h2>
 		<p>
-		假日時經常會安排自己早上的一小時游泳運動，不僅訓練身心更能幫助整天的思緒清晰，每當長假時總會計畫騎車到台灣各角落攝影，記錄下所有美好或重要的瞬間，以及參加各項有關電影、電視、廣告之展覽及活動。幫助自己對傳播產業的認識，再結合自己的想法加以發揮。對傳播媒體抱持極大熱忱的我，參加過很多相關活動，了解到，本來別人視為辛苦工作的拍影片、剪影片、做海報，在我眼中，是如此的開心並且上手。我的興趣非常多元，除了爸爸培養我的游泳以外，只要是戶外活動像是籃球、慢跑、登山我都非常喜歡，靜態的則是，打電動、讀書，最近讀了一本書叫做【合作思維】，內容主要是在職場上你並不是老闆的奴隸、老闆的棋子，而是老闆的合作夥伴，要把自己的能力拿出來，才有談判籌碼，進而跟老闆談到更好的薪水，以及得到了很多職場心法，以及最近最大的興趣是投資，研究產業、股票，最近也有嘗試把一些些資金投入股市，希望得到一些回報，雖然最近因為國際情勢的不穩定(烏俄戰爭)，讓我有不少虧損，但是只要保持積極樂觀的心態，我想長期以來依定會有梗好的收穫的。
-		我也非常喜歡攝影，本身有兩台底片相機以及一台數位相機，平時無聊時都會去近郊或著戶外散散步、賞風景賞花，把最美的一刻記錄下來，再用自己最喜歡的調色，把美麗風景變成屬於自己的樣子，再放到社群軟體與大眾分享，也有再經營一個屬於自己的照片帳號，把一些自己喜歡的小作品放上去，語版上厲害的人們互相交流，共同學習成長。
-		在另一個社群軟體低卡 DCARD 上，也有在梗圖板上更新兩篇屬於自己的梗圖，引發了廣大的回響，兩篇共獲得了將近七千次的按讚人數，以及上百則的留言，製作梗圖，是一種我另類的紓壓方式，把當時的社會時事記錄下來，用自己獨特、詼諧的想法表達出來，與大眾分享，發現大家關心的事也跟我差不多，就覺得非常有趣。我高中時就開始擔任班上各大活動的攝影工作。到了大學後，擔任學校劇組中的編劇及攝影，曾受邀至世新廣電系非戲劇【給我來一份】節目側拍，之後就更加確定了對攝影創作的憧憬。以及幫助育新人本游泳學校運動會時側拍記錄一職，把整個運動會記錄下來，也幫助游泳學校設計寒訓宣傳海報，幫助含炫般的游泳招生。最特別的是，大一暑假時我選擇了獨自到蘭嶼打工換宿，在那邊認識了非常多愛好自由，有非常多屬於自己想法的人，我們互相分享了非常多的人生規劃，也都在他們身上得到了很多認同，在蘭嶼的經驗也非常特殊，學到了很多。蘭嶼有別於其他離島有著強烈夏日海邊的印象更多了一份當地的文化涵養，拼板舟、滿路的山羊、美麗的海景、山景，在當地生活了整整一個月後，我真正的體會了一句話：【台灣最美的風景是人】。當地人的熱情、真誠，教會了我很多待人處事的道理，使我自己成長了不少。
+		假日時經常會安排自己早上的一小時游泳運動，不僅訓練身心更能幫助整天的思緒清晰，每當長假時總會計畫騎車到台灣各角落攝影，記錄下所有美好或重要的瞬間，以及參加各項有關電影、電視、廣告之展覽及活動。幫助自己對傳播產業的認識，再結合自己的想法加以發揮。</br>
+		對傳播媒體抱持極大熱忱的我，參加過很多相關活動，了解到，本來別人視為辛苦工作的拍影片、剪影片、做海報，在我眼中，是如此的開心並且上手。我的興趣非常多元，除了爸爸培養我的游泳以外，只要是戶外活動像是籃球、慢跑、登山我都非常喜歡，靜態的則是，打電動、讀書，最近讀了一本書叫做【合作思維】，內容主要是在職場上你並不是老闆的奴隸、老闆的棋子，而是老闆的合作夥伴，要把自己的能力拿出來，才有談判籌碼，進而跟老闆談到更好的薪水，以及得到了很多職場心法，以及最近最大的興趣是投資，研究產業、股票，最近也有嘗試把一些些資金投入股市，希望得到一些回報，雖然最近因為國際情勢的不穩定(烏俄戰爭)，讓我有不少虧損，但是只要保持積極樂觀的心態，我想長期以來依定會有梗好的收穫的。
+		我也非常喜歡攝影，本身有兩台底片相機以及一台數位相機，平時無聊時都會去近郊或著戶外散散步、賞風景賞花，把最美的一刻記錄下來，再用自己最喜歡的調色，把美麗風景變成屬於自己的樣子，再放到社群軟體與大眾分享，也有再經營一個屬於自己的照片帳號，把一些自己喜歡的小作品放上去，語版上厲害的人們互相交流，共同學習成長。</br>
+		在另一個社群軟體低卡 DCARD 上，也有在梗圖板上更新兩篇屬於自己的梗圖，引發了廣大的回響，兩篇共獲得了將近七千次的按讚人數，以及上百則的留言，製作梗圖，是一種我另類的紓壓方式，把當時的社會時事記錄下來，用自己獨特、詼諧的想法表達出來，與大眾分享，發現大家關心的事也跟我差不多，就覺得非常有趣。我高中時就開始擔任班上各大活動的攝影工作。</br>
+		到了大學後，擔任學校劇組中的編劇及攝影，曾受邀至世新廣電系非戲劇【給我來一份】節目側拍，之後就更加確定了對攝影創作的憧憬。以及幫助育新人本游泳學校運動會時側拍記錄一職，把整個運動會記錄下來，也幫助游泳學校設計寒訓宣傳海報，幫助含炫般的游泳招生。最特別的是，大一暑假時我選擇了獨自到蘭嶼打工換宿，在那邊認識了非常多愛好自由，有非常多屬於自己想法的人，我們互相分享了非常多的人生規劃，也都在他們身上得到了很多認同，在蘭嶼的經驗也非常特殊，學到了很多。蘭嶼有別於其他離島有著強烈夏日海邊的印象更多了一份當地的文化涵養，拼板舟、滿路的山羊、美麗的海景、山景，在當地生活了整整一個月後，我真正的體會了一句話：【台灣最美的風景是人】。當地人的熱情、真誠，教會了我很多待人處事的道理，使我自己成長了不少。
 		</p>
 	 </section>
 	 <section>
 		<h2>讀書計畫及未來規劃：</h2>
 		<p>
 		大學的這幾年，對我來說是人生中最繁華的燦爛時光，
-		朝氣蓬勃的我們，每一個都對未來的無限憧憬，並且磨刀霍霍準備面對各種挑戰。這幾年，我可以勇敢作夢，可以勇敢朝我的夢想前進。大學生活應該是一個對自己負責任開始。到外縣市讀書，身旁的同學也都來自臺灣各地，甚至是世界各地，陌生的地方、陌生的人，全新的生活。我認為來到大學的目的就是讓自己的興趣變成專業，好好的學習並且鑽研他。而我的興趣是攝影，不論是拍照或是影片，對於廣告也很有興趣，想要更專精在這方面的知識，因此想就讀世新大學公共關係暨廣告學系。除了專業外，語文能力也相對重要。心中一直有個小小的夢想，就是到國外工作，了解更多文化，認識更多人，互相分享理念、看法。所以想要考取多益，目標為八百或更高來出國進修。大四時會把重心放在課程知識學習，腳踏實地，做好每件事，並積極參加比賽，增加自己的作品品質及歷練，把自身所學，好好利用在工作上。畢業後的生活主要還是先在公司裡，邊做邊學，有了一定成績後，未來再考慮自己創業，開一個屬於自己的工作室，匯集志同道合的夥伴一起在專業上努力。因為實習的關係，在職場中認識了很多來自各校的強者，包含了台大、政大、中央等等，深知在知識及技術上自己的不足，打算再畢業、工作完一年以後，去英國、加拿大等美語體系地區進修研究所，目前是打算走市場行銷、市場溝通或行銷銷售等科系就讀，在回來後得到更好的工作機會，用自己得學經歷，再履行自己價值的同時，也同時幫助我所在的公司得到更多的價值。在就讀完研究所以後，打算繼續往行銷方面求職，會以大公司的行銷銷售為目標，獲得更具組織性的訓練以後，再前往小公司或新創產業帶領整個部門一同成長，履行自我價值，希望有天可以看到一個部門或是一間公司因為有我的加入而過得更好，在各方面都得到最大的產值。
+		朝氣蓬勃的我們，每一個都對未來的無限憧憬，並且磨刀霍霍準備面對各種挑戰。這幾年，我可以勇敢作夢，可以勇敢朝我的夢想前進。大學生活應該是一個對自己負責任開始。到外縣市讀書，身旁的同學也都來自臺灣各地，甚至是世界各地，陌生的地方、陌生的人，全新的生活。我認為來到大學的目的就是讓自己的興趣變成專業，好好的學習並且鑽研他。而我的興趣是攝影，不論是拍照或是影片，對於廣告也很有興趣，想要更專精在這方面的知識，因此想就讀世新大學公共關係暨廣告學系。除了專業外，語文能力也相對重要。心中一直有個小小的夢想，就是到國外工作，了解更多文化，認識更多人，互相分享理念、看法。所以想要考取多益，目標為八百或更高來出國進修。大四時會把重心放在課程知識學習，腳踏實地，做好每件事，並積極參加比賽，增加自己的作品品質及歷練，把自身所學，好好利用在工作上。</br>
+		畢業後的生活主要還是先在公司裡，邊做邊學，有了一定成績後，未來再考慮自己創業，開一個屬於自己的工作室，匯集志同道合的夥伴一起在專業上努力。</br>
+		因為實習的關係，在職場中認識了很多來自各校的強者，包含了台大、政大、中央等等，深知在知識及技術上自己的不足，打算再畢業、工作完一年以後，去英國、加拿大等美語體系地區進修研究所，目前是打算走市場行銷、市場溝通或行銷銷售等科系就讀，在回來後得到更好的工作機會，用自己得學經歷，再履行自己價值的同時，也同時幫助我所在的公司得到更多的價值。在就讀完研究所以後，打算繼續往行銷方面求職，會以大公司的行銷銷售為目標，獲得更具組織性的訓練以後，再前往小公司或新創產業帶領整個部門一同成長，履行自我價值，希望有天可以看到一個部門或是一間公司因為有我的加入而過得更好，在各方面都得到最大的產值。
 		</p>
 	 </section>
 	</div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 	</body>
 </html>
