--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 		</p>
 	 </section>
 	 <section>
-		<img src="S_99_181010475" width="400">
+		<img src="S_99_181010475.jpg" width="400">
 		<h2>興趣：</h2>
 		<p>
 		假日時經常會安排自己早上的一小時游泳運動，不僅訓練身心更能幫助整天的思緒清晰，每當長假時總會計畫騎車到台灣各角落攝影，記錄下所有美好或重要的瞬間，以及參加各項有關電影、電視、廣告之展覽及活動。幫助自己對傳播產業的認識，再結合自己的想法加以發揮。</br>
