--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 	<header>
 		<nav>
 		<ul>
-    	<a href="#">簡介</a> |
-    	<a href="#">家庭</a> |
-    	<a href="#">關於我</a> |
-    	<a href="#">特殊經歷</a> |
-    	<a href="#">興趣</a> |
+    	<a href="#brief">簡介</a> |
+    	<a href="#family">家庭</a> |
+    	<a href="#aboutme">關於我</a> |
+    	<a href="#experience">特殊經歷</a> |
+    	<a href="#interest">興趣</a> |
    		<a href="#">讀書計畫及未來規劃</a> |
 		</ul>
 		</nav>
@@ -30,7 +30,7 @@
 	</header>
 		
 	<div class="solid">
-	 <section>
+	 <section id="brief">
 
 		<h2>簡介：</h2>
 		<p>👉這裡是<a href="https://www.facebook.com/lee.h.w.dylan">李浩維</a>的臉書快來認識我！<p/><br>
@@ -41,26 +41,27 @@
 	
 	 </section>
 
-	 <section>
+	 <section id="family">
 		<h2>家庭：</h2>
 		<p>
 		我們家是個單純簡單的小家庭，先從最重要的父母開始提起，父親是游泳教練，母親是織布老師，爸爸對我來說就是我們整個家的支柱，自我有印象以來，他一天花在工作上的時間總是總是超過十個小時，每天早出晚歸，晚上九點過後才會到家，非常辛苦。母親則是負責打理好家中的一切，小時候在我出門前幫家裡準備早餐，帶我去上學，除了負責家裡大大小小的一切以外，也會到布紡去指導學生們織布、做手工藝。在爸爸從小的教育下，我開始每週都去游泳，養成游泳的好習慣，在縣市比在中總是屢獲佳績，而媽媽則教導了我人生非常多的做人處事道理，培養了我許多耐心，其中影響我最大的一句話就是【只有親手完成的事，才會是自己的】。另外最重要的是還有一個弟弟，他叫宅宅，是一隻雪納瑞，歲然他在前幾個月已經離去了，但他在我心中還是留有一個一席之地。
 		</p>
 	 </section>
-	 <section>	
+	 <section id="aboutme">	
 		<h2>關於我：</h2>
 		<p>
 		21歲是個說老不老，說年輕也已經不再年輕的歲數，在職場裡大家會感嘆，蛤？！你是2000年出生的？！真無法想像，而在大學裡放眼望去則是一群年紀比我小的莘莘學子們。我是李浩維，目前就讀世新大學資訊傳播學系大學四年級，是個轉學生，對船波及行銷非常有興趣，以前就讀的是大眾傳播學系，在高雄，因為發現當地的教學、聞聞環境與我格格不入時，毅然決然地到台北尋找更好的學校，拚一個轉學機會。證實了自己的實力以外，至目前也找到了一個非常不錯的實習機會，我會對現在的我說一聲，你以前布努力不好好讀書沒關係，至少從現在開始再好好努力也還來得及，加油有機會就樣好好把握。
 		</p>
 	 </section>
 		
-	 <section>
+	 <section id="experience">
 		<h2>特殊經歷：</h2>
 		<p>
 		我高中時就開始擔任班上各大活動的攝影工作。到了大學後，擔任學校劇組中的編劇及攝影，曾受邀至世新廣電系非戲劇【給我來一份】節目側拍，之後就更加確定了對攝影創作的憧憬。以及幫助育新人本游泳學校運動會時側拍記錄一職，把整個運動會記錄下來，也幫助游泳學校設計寒訓宣傳海報，幫助含炫般的游泳招生。最特別的是，大一暑假時我選擇了獨自到蘭嶼打工換宿，在那邊認識了非常多愛好自由，有非常多屬於自己想法的人，我們互相分享了非常多的人生規劃，也都在他們身上得到了很多認同，在蘭嶼的經驗也非常特殊，學到了很多。蘭嶼有別於其他離島有著強烈夏日海邊的印象更多了一份當地的文化涵養，拼板舟、滿路的山羊、美麗的海景、山景，在當地生活了整整一個月後，我真正的體會了一句話：【台灣最美的風景是人】。當地人的熱情、真誠，教會了我很多待人處事的道理，使我自己成長了不少。
 		</p>
 	 </section>
-	 <section>
+		
+	 <section id="interest">
 		<img src="S_99_181010475.jpg" width="400">
 		<h2>興趣：</h2>
 		<p>
