--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     	<a href="#aboutme">關於我</a> |
     	<a href="#experience">特殊經歷</a> |
     	<a href="#interest">興趣</a> |
-   		<a href="#">讀書計畫及未來規劃</a> |
+   		<a href="#study">讀書計畫及未來規劃</a> |
 		</ul>
 		</nav>
 		<h1>A107070263 李浩維 自我介紹</h1>
@@ -72,7 +72,7 @@
 		到了大學後，擔任學校劇組中的編劇及攝影，曾受邀至世新廣電系非戲劇【給我來一份】節目側拍，之後就更加確定了對攝影創作的憧憬。以及幫助育新人本游泳學校運動會時側拍記錄一職，把整個運動會記錄下來，也幫助游泳學校設計寒訓宣傳海報，幫助含炫般的游泳招生。最特別的是，大一暑假時我選擇了獨自到蘭嶼打工換宿，在那邊認識了非常多愛好自由，有非常多屬於自己想法的人，我們互相分享了非常多的人生規劃，也都在他們身上得到了很多認同，在蘭嶼的經驗也非常特殊，學到了很多。蘭嶼有別於其他離島有著強烈夏日海邊的印象更多了一份當地的文化涵養，拼板舟、滿路的山羊、美麗的海景、山景，在當地生活了整整一個月後，我真正的體會了一句話：【台灣最美的風景是人】。當地人的熱情、真誠，教會了我很多待人處事的道理，使我自己成長了不少。
 		</p>
 	 </section>
-	 <section>
+	 <section id="study">
 		<h2>讀書計畫及未來規劃：</h2>
 		<p>
 		大學的這幾年，對我來說是人生中最繁華的燦爛時光，
